gitops/apps/smoke-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nestjs-boilerplate-dev-workload
  labels:
    app.kubernetes.io/name: nestjs-boilerplate
    app.kubernetes.io/part-of: nestjs-boilerplate
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/environment: dev
