gitops/apps/smoke-app/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nestjs-boilerplate-dev-smoke-app
  namespace: nestjs-boilerplate-dev-workload
spec:
  parentRefs:
    - name: private-origin-gateway
      namespace: envoy-gateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nestjs-boilerplate-dev-smoke-app
          port: 5000
